--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index",
-    "dev":"nodemon index"
-    },
+    "start": "node index",
+    "dev": "nodemon index"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.10.0"
   },
