--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "axios": "0.26.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.14",
     "vue-router": "^3.0.1",
     "vuejs-datepicker": "^1.6.2",
