--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.14",
+    "vue-pagination-bootstrap": "^1.0.3",
     "vue-router": "^3.0.1",
+    "vue-slider-component": "^3.2.24",
     "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.1"
   },
